# paxos

./: CMakeLists.txt  README.md
config/: network_topology.json
src/: CMakeLists.txt
src/acceptor/: AcceptorConnection.cpp  CMakeLists.txt  JoinHandler.cpp  PrepareHandler.cpp
src/acceptor/include/: AcceptHandler.hpp  Acceptor.hpp  AcceptorConnection.hpp  JoinHandler.hpp  PrepareHandler.hpp
src/app/: CMakeLists.txt  Node.cpp  main.cpp
src/app/include/: Node.hpp
src/network/: CMakeLists.txt  JSONNetworkTopologyParser.cpp  NetworkTopology.cpp  PaxosSocket.cpp
src/network/include/: JSONNetworkTopologyParser.hpp  MessageDispatcher.hpp  NetworkTopology.hpp  PaxosSocket.hpp  PaxosSocketTypes.hpp  ReactiveHandler.hpp  Serializer.hpp
src/proposer/: CMakeLists.txt  ProposerConnection.cpp
src/proposer/include/: AcceptedHandler.hpp  PaxosConsensus.hpp  PromiseHandler.hpp  Proposer.hpp  ProposerConnection.hpp  ProposerConnectionAcceptor.hpp  ProposerConnector.hpp  ProposerHandlers.hpp  ProposerSender.hpp  SharedData.hpp  WelcomeHandler.hpp
src/protocol/: CMakeLists.txt  messages.proto
test/: AcceptHandlerTestSuite.cpp  CMakeLists.txt  JSONNetworkTopologyTestSuite.cpp  PaxosConsensusTestSuite.cpp  PaxosSocketTestSuite.cpp  PrepareHandlerTestSuite.cpp  PromiseHandlerTestSuite.cpp  ProposerMsgWriteSocketMock.cpp
test/mock/: PocoStreamSocketMock.hpp  ProposerMsgWriteSocketMock.hpp
